Atualização dos sietma de login, procedimento de registo

--- a/versao_pdo/1-exploracao_conceitos/form-insert.html
+++ b/versao_pdo/1-exploracao_conceitos/form-insert.html
@@ -7,7 +7,9 @@
     <title>Inserção de Registos</title>
 </head>
 <body>
-    <form action="insert.php" method="post">
+    <!-- Exemplo 1
+    <form action="insert.php" method="post"> -->
+    <form action="insert_simplex.php" method="post">
         <p>
             <label for="firstName">Nome:</label>
             <input type="text" name="first_name" id="firstName">
